2003-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/lead-dot.m4: New (from automake-1.7f).
	* aclocal/rtems-top.m4: Require AM_SET_LEADING_DOT.
	Add AC_SUBST(dirstamp).

2003-11-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Reflect having removed
	libnetworking/libc/Makefile.am, libnetworking/lib/Makefile.am.

2003-11-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Reflect changes to libmisc/*.

2003-11-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Merge-in former libmisc/wrapup/Makefile.am

2003-11-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Reflect changes to libfs Makefile.ams.
	Remove libmisc/wrapup/Makefile.

2003-11-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use here-documents to generate cpuopts.tmp.
	Various fixes and changes to argument processing.
	Reflect changes to librpc Makefile.ams.
	* acinclude.m4: Use here-documents to generate cpuopts.tmp.
	* aclocal/check-itron.m4: Remove HAS_IRON_API.
	* aclocal/check-multiprocessing.m4: Remove HAS_MP.
	* aclocal/check-posix.m4: Remove HAS_POSIX_API.

2003-11-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/canonicalize-tools.m4, aclocal/check-itron.m4,
	aclocal/check-multiprocessing.m4, aclocal/check-newlib.m4,
	aclocal/check-posix.m4, aclocal/check-rtems-debug.m4,
	aclocal/check-tool.m4, aclocal/enable-bare.m4,
	aclocal/enable-inlines.m4, aclocal/enable-itron.m4,
	aclocal/enable-multiprocessing.m4, aclocal/enable-networking.m4,
	aclocal/enable-posix.m4, aclocal/enable-rtems-debug.m4,
	aclocal/env-rtemscpu.m4, aclocal/gcc-isystem.m4,
	aclocal/gcc-pipe.m4, aclocal/multi.m4,
	aclocal/multilib.m4, aclocal/prog-cc.m4,
	aclocal/rtems-top.m4, aclocal/sysv-ipc.m4:
	Fix underquoting to silence automake-1.8.

2003-11-24	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use RTEMS_INLINES instead of USE_INLINES.
	Elimimate INLINESdir.
	* aclocal/enable-inlines.m4: Ditto. Remove RTEMS_USE_MACROS.