@@ -1,5 +1,9 @@
 2003-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
+	* Makefile.am: Add $(dirstamp) to preinstallation rules.
+
+2003-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
 	* aclocal/lead-dot.m4: New (from automake-1.7f).
 	* aclocal/rtems-top.m4: Require AM_SET_LEADING_DOT.
 	Add AC_SUBST(dirstamp).
